--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="fenxiao-gene">
+    <wb-module deploy-name="mall">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="java-output-path" value="/fenxiao-gene/build/classes"/>
-        <property name="context-root" value="fenxiao-gene"/>
+        <property name="java-output-path" value="/mall/build/classes"/>
+        <property name="context-root" value="mall"/>
     </wb-module>
 </project-modules>
